# memegenerator

./: .env.dev.example  .env.prod.example  .gitignore  .markdownlint.yaml  AGENTS.md  Makefile  README.md  TODO  compose.localprod.yml  compose.yml  justfile
backend/: .dockerignore  .gitignore  Makefile  justfile  manage.py  pyproject.toml
backend/docker/: Dockerfile
backend/src/: config.py  database.py  dependencies.py  exceptions.py  logging_setup.py  main.py  models.py  otel_setup.py  web.py
backend/src/cli/: __init__.py  example.py  main.py  templates.py  users.py
backend/src/db/: __init__.py  database.py
backend/src/db/migrations/: alembic.ini  env.py  script.py.mako
backend/src/migrations/: alembic.ini  env.py
backend/src/migrations/versions/: 2026_02_23_0000-0001_create_templates.py  2026_02_23_0000-0003_index_templates_created_at.py  2026_02_24_0000-0004_add_template_popularity.py  2026_03_27_2132-18eb37ad9bb7_add_users_groups_roles_sessions.py  2026_03_27_2133-732e26eb5608_seed_admin_role.py  2026_03_27_2137-c60fc7254dc9_add_session_token.py  2026_03_27_2147-6e886ea6bb5e_drop_sessions_table.py  2026_03_28_0000-a9f1e3b7c2d5_add_template_creator_id.py  (+1 more)
backend/src/models/: __init__.py  template.py
backend/src/routes/: __init__.py  auth.py  health.py  templates.py
backend/src/schemas/: __init__.py  template.py
backend/src/services/: __init__.py  templates.py  users.py
backend/src/storage/: __init__.py  disk.py  local.py  s3.py
backend/src/web/: __init__.py  main.py
backend/tests/stress/: seed_templates.py
docs/: deployment.md  dev.md  (+1 more)
(+44 files in other folders)
