[project]
name = "lapp"
version = "0.1.3"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "authlib>=1.6.9",
    "boto3>=1.42.55",
    "click>=8.3.1",
    "fastapi[standard]>=0.129.0",
    "itsdangerous>=2.2.0",
    "pydantic-settings>=2.13.1",
    "slowapi>=0.1.9",
]

[dependency-groups]
dev = ["bandit>=1.9.3", "ruff>=0.15.1", "ty>=0.0.17"]

[tool.ruff]
lint.select = [
    "E",    # pycodestyle error
    "F",    # pyflake
    "I",    # isort imports
    "SIM",  # Simplify code
    "C4",   # Better list/set/dict comprehensions
    "ERA",  # Removes commented-out code from Python files.
    "FAST", # FAST API related
    "A",    # Check for python builtins being used as variables or parameters.
    "DTZ",  #  Ban the usage of unsafe naive datetime class
    "T10",  # Check for pdb;idbp imports and set traces
    "SLF",  # Private members accessed
    "RET",  # Checks return values
]

[tool.ty.src]
include = ["src", "tests"]
exclude = [".venv"]
